2005-09-18 Pierrick LE GALL

	* bug 107 fixed: crash when logging visit on a category containing
	"'" character. Correction reported from branch 1.4

	* bug fixed: in admin/stats, incorrect SQL queries gave no result.

2005-09-18 Pierrick LE GALL

	* bug 101 fixed: "problem with IE search on keywords". correction
	reported from branch 1.4

2005-09-17 Pierrick LE GALL

	* new: automatic new password sent by mail when requested by user

2005-09-17 Pierrick LE GALL

	* improvement: add information about how to use an external table
	for users
	
	* bug fixed: uses user configuration fields for filtering in
	admin/user_list

	* bug fixed: don't try to create feeds automatically during
	sync_users (when line in user_infos is missing)

	* bug fixed: create_user_infos function gives status admin if user
	id matches $conf['webmaster_id']

2005-09-17 Pierrick LE GALL

	* new: the number of elements waiting for validation is notified
	in RSS feed.

2005-09-17 Pierrick LE GALL

	* translation: common and admin strings translated in french from
	english files

2005-09-14 Pierrick LE GALL

	* improvement: long localized messages are in HTML files instead
	of $lang array. This is the case of admin/help and about pages.

	* deletion: of unused functions (ts_to_mysqldt, is_image,
	TN_exists, check_date_format, date_convert,
	get_category_directories, get_used_metadata_list, array_remove,
	pwg_write_debug, get_group_restrictions,
	get_all_group_restrictions, is_group_allowed, style_select,
	deprecated_getAttribute).

	* new: many new contextual help pages to replace descriptions
	previously included in pages.

	* modification: reorganisation of language files. Deletion of
	unused language keys, alphabetical sort. No faq.lang.php anymore
	(replaced by help.html). Only done for en_UK.iso-8859-1.

2005-09-03 Pierrick LE GALL

	* bug fixed : no display of first added element date in
	admin/intro if no element in the gallery.

2005-09-03 Pierrick LE GALL
