@@ -1,5 +1,16 @@
 2005-09-18 Pierrick LE GALL
 
+	* bug 111 fixed: "Can't add virtual category when cookie
+	disabled". Correction reported from branch 1.4.
+
+	* bug 109 fixed : "disabled "best rated" menu item when rating is
+	not enabled". Correction reported from branch 1.4.
+
+	* bug 95 fixed : "default maxwidth and maxheight not registered
+	". Correction reported from branch 1.4.
+
+2005-09-18 Pierrick LE GALL
+
 	* bug 107 fixed: crash when logging visit on a category containing
 	"'" character. Correction reported from branch 1.4
 
